[package]
name = "ydb-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ydb = "0.4"
uuid = { version = "1.2", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = {version="1.21", features=["full"]}
mime_guess = "2.0"
